Implemented `Error` trait from std using thiserror
This changes implementation of `Display` and `Debug` of `Error` type to
use derive from `thiserror` crate, which is shorter and adds `std::Error`
impl as well.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ debug-log = []
 reqwest = "0.10.1"
 scraper = "0.11.0"
 anyhow = "1.0.26"
+thiserror = "1.0.7"
 
 [dev-dependencies]
 tokio = {version = "0.2.8", features = ["full"]}
